# tg_cdn

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-standalone.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: Controller.py  README.md  SendTgbot.py  api.py  db.py  main.py  worker.py
