[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_cdn"
version = "0.1.0"
description = "tg_cdn"
dependencies = [
    "python-telegram-bot>=21.0",
    "SQLAlchemy>=2.0",
    "aiomysql",
    "httpx",
    "fastapi",
    "uvicorn",
    "python-multipart",
]
